--- a/SEMANA07/ATIVIDADE PARA ENTREGAR/TesteFuncionalAulaPratica-SEMANA07-ENTREGA/pom.xml
+++ b/SEMANA07/ATIVIDADE PARA ENTREGAR/TesteFuncionalAulaPratica-SEMANA07-ENTREGA/pom.xml
@@ -32,6 +32,18 @@
             <version>2.0.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco</artifactId>
+            <version>0.8.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.sourceforge.cobertura</groupId>
+            <artifactId>cobertura</artifactId>
+            <version>2.1.1</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
